packages/workflow/tests/__snapshots__/ingress-annotations.prod.prod.yaml
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ingress-annotations.prod.prod 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: '1234'
    kubeWorkflow/gitBranch: feature-branch-1
    kubeWorkflow/mainNamespace: 'true'
  labels:
    application: test-ingress-annotations.prod
  name: test-ingress-annotations.prod
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-ingress
  namespace: test-ingress-annotations.prod
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    component: metabase
    application: test-ingress-annotations.prod
  name: metabase
  namespace: test-ingress-annotations.prod
data:
  MB_APPLICATION_NAME: metabase
  MB_DB_TYPE: postgres
  MB_ADMIN_EMAIL: admin@fabrique.social.gouv.fr
  MB_ANON_TRACKING_ENABLED: 'false'
  MB_APPLICATION_LOGO_URL: https://socialgouv.github.io/support/_media/marianne.jpeg
  MB_EMAIL_FROM_ADDRESS: contact@fabrique.social.gouv.fr
  MB_ENABLE_EMBEDDING: 'true'
  MB_ENABLE_PUBLIC_SHARING: 'true'
  MB_SITE_LOCALE: fr
  MB_SITE_NAME: Fabrique des ministères sociaux
  MB_SITE_URL: https://metabase-test-ingress-annotations.prod.fabrique.social.gouv.fr
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: metabase
    application: test-ingress-annotations.prod
  name: metabase
  namespace: test-ingress-annotations.prod
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    component: metabase
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: metabase
    application: test-ingress-annotations.prod
  name: metabase
  namespace: test-ingress-annotations.prod
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/nonce: ''
    kapp.k14s.io/create-strategy: fallback-on-update
    kapp.k14s.io/update-strategy: fallback-on-replace
    kapp.k14s.io/change-group: autodevops/test-ingress-annotations.prod
    kapp.k14s.io/change-group.metabase: autodevops/metabase.test-ingress-annotations.prod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: metabase
  template:
    metadata:
      labels:
        component: metabase
        application: null
    spec:
      containers:
        - image: metabase/metabase:v0.41.6
          name: metabase
          env: null
          envFrom:
            - configMapRef:
                name: metabase
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 240
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 512Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io: cluster-issuer
    kubernetes.io/tls-acme: 'true'
  labels:
    component: metabase
    application: test-ingress-annotations.prod
  name: metabase
  namespace: test-ingress-annotations.prod
spec:
  rules:
    - host: metabase-test-ingress-annotations.prod.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: metabase
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - metabase-test-ingress-annotations.prod.fabrique.social.gouv.fr
      secretName: metabase-crt
"
`;
